fix overflow on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 // general
-body{
+body, .wraper{
     overflow-x:hidden;
 }
 h1,
